--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "async": "~0.1.22",
     "request": "~2.34.0",
     "underscore": "~1.3.3",
-    "xml": "0.0.7",
-    "xml2js": "~0.1.14"
+    "xml": "0.0.12",
+    "xml2js": "^0.4.4"
   },
   "devDependencies": {},
   "optionalDependencies": {},
