--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "async": "~0.1.22",
     "request": "~2.34.0",
     "underscore": "~1.3.3",
-    "xml": "0.0.12",
+    "xml": "HaveKarma/node-xml",
     "xml2js": "^0.4.4"
   },
   "devDependencies": {},
